overflow background fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,11 +9,11 @@
 }
 
 #root {
-  overflow: hidden;
-
   &>:last-child {
-    height: 100vh;
-    width: 100vw;
+    height: fit-content;
+    width: fit-content;
+    min-height: 100vh;
+    min-width: 100vw;
   }
 }
 
